--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.10"
   },
   "devDependencies": {
